# pygameapp-DevStop

./: README.md  pyproject.toml
config/: display.config
src/pgapp/: __init__.py  _config.py  _format.py  _fromat.py  _inheritance.py
tests/: test.py
